2009-12-29  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-response-body): Return nil
	explicitly when a broken XML data passed into `xml-parse-region'.
	(twittering-http-get-default-sentinel): Adjust callers.
	(twittering-http-post-default-sentinel): Likewise.

	* twittering-mode.el (twittering-http-post-default-sentinel): Add 
	`debug-printf' same as `twittering-http-get-default-sentinel'.

	* twittering-mode.el (twittering-http-post-default-sentinel):
	Change a regexp pattern for HTTP response status line; same as
	`twittering-http-get-default-sentinel'.
	(twittering-http-get-list-index-sentinel): Likewise.

2009-12-29  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el: load mule-ucs if needed (emacs21)
	(twittering-start-http-ssl-session): add 'Expect: ' header field
	for avoiding '417 Expectation Failed' HTTP response error. See
	http://d.hatena.ne.jp/imait/20091228/1262004813 and
	http://www.escafrace.co.jp/blog/09/10/16/1008

	* twittering-mode.el: load 'cl' only at compile
	time. cf. http://www.gnu.org/software/emacs/manual/html_node/cl/Overview.html

2009-12-28  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-get-response-header)
	(twittering-get-response-body): inefficient code were
	replaced. thanks to Tadashi MATSUO

2009-12-27  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-show-minibuffer-length): keeps
	activated mark from being forcefully deactivated.

2009-12-27  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/run-test.sh: add. invoke unit test for each emacsen

	* Makefile (check): add check rule.

	* test/el-test-runner.el (twittering-run-test): exit with
	appropriate status code.

	* test.el (test-transform-body): add. transforms the body of
	`defcase' recursively
	(defcase): use `test-transform-body'

	* test/run-test.el (twittering-run-test): colorize resulting
	outputs

2009-12-27  Satoshi Yatagawa  <yata_github@y.hauN.org>
